tdf#116987 dbahsql: check for table names..

..longer than 30 characters. In that case throw SQLException which
indicates that the currently used Firebird version cannot handle table
names longer than 30 characters.

Change-Id: Ib2978feaeef22b70de9f2351042c25206a041105
Reviewed-on: https://gerrit.libreoffice.org/54398
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Bunth <btomi96@gmail.com>